fix(module-api): fix IIFE and button to close movieinfo screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -363,8 +363,9 @@ text-align: center;
     margin-top: 28px;
 }
 
-.btn-add{
-    margin-top: ;
+.btn-movieinfo{
+    text-align: center;
+    margin-top: 3%;
 }
 
 
